--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <h1>Strona Bohdana Tsiruka</h1>
     <p>Zadania:</p>
     <div class="file-links">
-        <a href="https://example.com/zadania1" target="_blank">Zadania 1</a><br>
-        <a href="https://example.com/zadania2" target="_blank">Zadania 2</a><br>
-        <a href="https://example.com/zadania3" target="_blank">Zadania 3</a><br>
+        <a href="zadania1.html" target="_blank">Zadania 1</a><br>
+        <a href="zadania2.html" target="_blank">Zadania 2</a><br>
     </div>
 </body>
 </html>
