--- a/index.html
+++ b/index.html
@@ -3,14 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strona Bohdana Tsiruka</title>
+    <title>Bohdan Tsiruk</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Strona Bohdana Tsiruka</h1>
-    <p>Zadania:</p>
-    <div class="file-links">
-        <a href="zadania1.html" target="_blank">Zadania 1</a><br>
-        <a href="zadania2.html" target="_blank">Zadania 2</a><br>
+    <h1>Bohdan Tsiruk</h1>
+    <nav>
+        <ul class="menu">
+            <li>
+                <a href="#" id="task-menu-link">Zadania</a>
+                <ul class="dropdown" id="task-menu">
+                    <li><a href="task1/task1.html">Zadania 1</a></li>
+                    <li><a href="task2/task2.html">Zadania 2</a></li>
+                    <li><a href="task3.html">Zadania 3</a></li>
+                </ul>
+            </li>
+            <li><a href="#">NAN</a></li>
+        </ul>
+    </nav>
+
+    <div class="content">
+        <!-- Інший контент сторінки -->
     </div>
+
 </body>
 </html>
