--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <ul class="dropdown" id="task-menu">
                     <li><a href="task1/task1.html">Zadania 1</a></li>
                     <li><a href="task2/task2.html">Zadania 2</a></li>
-                    <li><a href="task3.html">Zadania 3</a></li>
+                    <li><a href="task3/task3.html">Zadania 3</a></li>
+                    <li><a href="task4/task4.html">Zadania 4</a></li>
                 </ul>
             </li>
             <li><a href="#">NAN</a></li>
