--- a/task2/task2.html
+++ b/task2/task2.html
@@ -1,74 +1,54 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formularz osobowy</title>
+    <title>Zadania2</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>Formularz osobowy</h1>
+<div class="mycontainer1 clearfix">
+    <div>
+        <p>The sun was setting over the hills, casting a golden glow across the valley. Birds chirped in the trees, signaling the end of another day. A gentle breeze rustled the leaves, bringing with it the scent of pine and fresh grass. In the distance, a river flowed quietly, its surface shimmering in the fading light. People were slowly gathering by the riverside, enjoying the calmness of the evening. Children played on the grass, laughing and chasing each other with boundless energy. Nearby, an elderly couple sat on a bench, reminiscing about days long past. The distant mountains stood tall and silent, their peaks dusted with snow. As the first stars appeared in the sky, a sense of peace settled over the landscape. It was a perfect moment, untouched by the worries of the world.</p>
+    </div>
+    <div>
+        <p>The sun was setting over the hills, casting a golden glow across the valley. Birds chirped in the trees, signaling the end of another day. A gentle breeze rustled the leaves, bringing with it the scent of pine and fresh grass. In the distance, a river flowed quietly, its surface shimmering in the fading light. People were slowly gathering by the riverside, enjoying the calmness of the evening. Children played on the grass, laughing and chasing each other with boundless energy. Nearby, an elderly couple sat on a bench, reminiscing about days long past. The distant mountains stood tall and silent, their peaks dusted with snow. As the first stars appeared in the sky, a sense of peace settled over the landscape. It was a perfect moment, untouched by the worries of the world.</p>
+    </div>
+</div>
 
-<form action="/submit_form" method="POST">
-    <!-- Imię -->
-    <label for="imie">Imię:</label>
-    <input type="text" id="imie" name="imie" required><br><br>
+<div class="mycontainer2 clearfix">
+    <div>
+        <p>The sun was setting over the hills, casting a golden glow across the valley. Birds chirped in the trees, signaling the end of another day. A gentle breeze rustled the leaves, bringing with it the scent of pine and fresh grass. In the distance, a river flowed quietly, its surface shimmering in the fading light. People were slowly gathering by the riverside, enjoying the calmness of the evening. Children played on the grass, laughing and chasing each other with boundless energy. Nearby, an elderly couple sat on a bench, reminiscing about days long past. The distant mountains stood tall and silent, their peaks dusted with snow. As the first stars appeared in the sky, a sense of peace settled over the landscape. It was a perfect moment, untouched by the worries of the world.</p>
+    </div>
+</div>
 
-    <!-- Nazwisko -->
-    <label for="nazwisko">Nazwisko:</label>
-    <input type="text" id="nazwisko" name="nazwisko" required><br><br>
+<div class="mycontainer3 clearfix">
+    <div>
+        <p>The sun was setting over the hills, casting a golden glow across the valley. Birds chirped in the trees, signaling the end of another day. A gentle breeze rustled the leaves, bringing with it the scent of pine and fresh grass. In the distance, a river flowed quietly, its surface shimmering in the fading light. People were slowly gathering by the riverside, enjoying the calmness of the evening. Children played on the grass, laughing and chasing each other with boundless energy. Nearby, an elderly couple sat on a bench, reminiscing about days long past. The distant mountains stood tall and silent, their peaks dusted with snow. As the first stars appeared in the sky, a sense of peace settled over the landscape. It was a perfect moment, untouched by the worries of the world.</p>
+    </div>
+    <div>
+        <p>The sun was setting over the hills, casting a golden glow across the valley. Birds chirped in the trees, signaling the end of another day. A gentle breeze rustled the leaves, bringing with it the scent of pine and fresh grass. In the distance, a river flowed quietly, its surface shimmering in the fading light. People were slowly gathering by the riverside, enjoying the calmness of the evening. Children played on the grass, laughing and chasing each other with boundless energy. Nearby, an elderly couple sat on a bench, reminiscing about days long past. The distant mountains stood tall and silent, their peaks dusted with snow. As the first stars appeared in the sky, a sense of peace settled over the landscape. It was a perfect moment, untouched by the worries of the world.</p>
+    </div>
+    <div>
+        <p>The sun was setting over the hills, casting a golden glow across the valley. Birds chirped in the trees, signaling the end of another day. A gentle breeze rustled the leaves, bringing with it the scent of pine and fresh grass. In the distance, a river flowed quietly, its surface shimmering in the fading light. People were slowly gathering by the riverside, enjoying the calmness of the evening. Children played on the grass, laughing and chasing each other with boundless energy. Nearby, an elderly couple sat on a bench, reminiscing about days long past. The distant mountains stood tall and silent, their peaks dusted with snow. As the first stars appeared in the sky, a sense of peace settled over the landscape. It was a perfect moment, untouched by the worries of the world.</p>
+    </div>
+    <div>
+        <p>The sun was setting over the hills, casting a golden glow across the valley. Birds chirped in the trees, signaling the end of another day. A gentle breeze rustled the leaves, bringing with it the scent of pine and fresh grass. In the distance, a river flowed quietly, its surface shimmering in the fading light. People were slowly gathering by the riverside, enjoying the calmness of the evening. Children played on the grass, laughing and chasing each other with boundless energy. Nearby, an elderly couple sat on a bench, reminiscing about days long past. The distant mountains stood tall and silent, their peaks dusted with snow. As the first stars appeared in the sky, a sense of peace settled over the landscape. It was a perfect moment, untouched by the worries of the world.</p>
+    </div>
+</div>
 
-    <!-- Ulica -->
-    <label for="ulica">Ulica:</label>
-    <input type="text" id="ulica" name="ulica" required><br><br>
-
-    <!-- Numer domu -->
-    <label for="dom">Numer domu:</label>
-    <input type="number" id="dom" name="dom" required><br><br>
-
-    <!-- Numer mieszkania -->
-    <label for="mieszkanie">Numer mieszkania:</label>
-    <input type="number" id="mieszkanie" name="mieszkanie"><br><br>
-
-    <!-- Miasto -->
-    <label for="miasto">Miasto:</label>
-    <input type="text" id="miasto" name="miasto" required><br><br>
-
-    <!-- Data urodzenia -->
-    <label for="data_urod">Data urodzenia:</label>
-    <input type="date" id="data_urod" name="data_urod" required><br><br>
-
-    <!-- Telefon -->
-    <label for="telefon">Telefon:</label>
-    <input type="tel" id="telefon" name="telefon" pattern="[0-9]{9}" required><br><br>
-
-    <!-- Email -->
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
-
-    <!-- Płeć -->
-    <label for="plec">Płeć:</label><br>
-    <input type="radio" id="male" name="plec" value="male" required>
-    <label for="male">Mężczyzna</label><br>
-    <input type="radio" id="female" name="plec" value="female">
-    <label for="female">Kobieta</label><br><br>
-
-    <!-- Prawo jazdy -->
-    <label for="prawo_jazdy">Prawo jazdy:</label><br>
-    <input type="checkbox" id="prawo_jazdy" name="prawo_jazdy" value="tak">
-    <label for="prawo_jazdy">Posiadam prawo jazdy</label><br><br>
-
-    <!-- Hasło -->
-    <label for="haslo">Hasło:</label>
-    <input type="password" id="haslo" name="haslo" required><br><br>
-
-    <!-- Uwagi -->
-    <label for="uwagi">Uwagi:</label><br>
-    <textarea id="uwagi" name="uwagi" rows="4" cols="50"></textarea><br><br>
-
-    <!-- Przycisk wysyłania -->
-    <input type="submit" value="Wyślij">
-</form>
+<div class="mycontainer4 clearfix">
+    <div class="half-column">
+        <p>The sun was setting over the hills, casting a golden glow across the valley. Birds chirped in the trees, signaling the end of another day. A gentle breeze rustled the leaves, bringing with it the scent of pine and fresh grass. In the distance, a river flowed quietly, its surface shimmering in the fading light. People were slowly gathering by the riverside, enjoying the calmness of the evening. Children played on the grass, laughing and chasing each other with boundless energy. Nearby, an elderly couple sat on a bench, reminiscing about days long past. The distant mountains stood tall and silent, their peaks dusted with snow. As the first stars appeared in the sky, a sense of peace settled over the landscape. It was a perfect moment, untouched by the worries of the world.</p>
+    </div>
+    <div class="quarter-column">
+        <p>The sun was setting over the hills, casting a golden glow across the valley. Birds chirped in the trees, signaling the end of another day. A gentle breeze rustled the leaves, bringing with it the scent of pine and fresh grass. In the distance, a river flowed quietly, its surface shimmering in the fading light. People were slowly gathering by the riverside, enjoying the calmness of the evening. Children played on the grass, laughing and chasing each other with boundless energy. Nearby, an elderly couple sat on a bench, reminiscing about days long past. The distant mountains stood tall and silent, their peaks dusted with snow. As the first stars appeared in the sky, a sense of peace settled over the landscape. It was a perfect moment, untouched by the worries of the world.</p>
+    </div>
+    <div class="quarter-column">
+        <p>The sun was setting over the hills, casting a golden glow across the valley. Birds chirped in the trees, signaling the end of another day. A gentle breeze rustled the leaves, bringing with it the scent of pine and fresh grass. In the distance, a river flowed quietly, its surface shimmering in the fading light. People were slowly gathering by the riverside, enjoying the calmness of the evening. Children played on the grass, laughing and chasing each other with boundless energy. Nearby, an elderly couple sat on a bench, reminiscing about days long past. The distant mountains stood tall and silent, their peaks dusted with snow. As the first stars appeared in the sky, a sense of peace settled over the landscape. It was a perfect moment, untouched by the worries of the world.</p>
+    </div>
+</div>
 
 </body>
 </html>
