--- a/index.html
+++ b/index.html
@@ -17,14 +17,28 @@
                     <li><a href="task2/task2.html">Zadania 2</a></li>
                     <li><a href="task3/task3.html">Zadania 3</a></li>
                     <li><a href="task4/task4.html">Zadania 4</a></li>
+                    <li><a href="task5/task5.html">calculator</a></li>
                 </ul>
             </li>
-            <li><a href="#">NAN</a></li>
+            <li>
+                <a href="#">Windows install</a>
+                <ul class="dropdown" id="task-menu">
+                    <li><a href="windows_install/windows_install.html">Program</a>
+                    <li><a href="windows_install/version_windows.html">version windows</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">linux install</a>
+                <ul class="dropdown" id="task-menu">
+                    <li><a href="windows_install/windows_install.html">Program</a>
+                    <li><a href="windows_install/linux_des.html">linux_des</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 
     <div class="content">
-        <!-- Інший контент сторінки -->
+        
     </div>
 
 </body>
